revamped all pages

--- a/about.html
+++ b/about.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sweet Buns | About Us</title>
+  <meta charset="utf-8">
+  <title>About Sweet Buns Bakery | Local Cape Town Story Since 2017</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Founded in 2017 by friends Thato & Michael, Sweet Buns Bakery is Cape Town's favourite community spot for fresh, locally-sourced baked goods.">
+  <link rel="canonical" href="https://yourdomain.net/about.html">
+
+  <meta property="og:title" content="About Sweet Buns Bakery | Local Cape Town Story Since 2017">
+  <meta property="og:description" content="Read our story, mission and vision. Sweet Buns Bakery – a Cape Town community bakery since 2017.">
+  <meta property="og:image" content="https://yourdomain.net/images/bakery-owners-cape-town.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+  <nav>
+    <h1 class="logo">Sweet Buns</h1>
+    <ul>
+      <li><a href="homepage.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="enquiry.html">Enquiry</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
-  <!-- Navigation -->
-
-<nav>
-  <h1 class="logo">Sweet Buns</h1>
-  <ul>
-    <li><a href="homepage.html">Home</a></li>
-    <li><a href="about.html">About Us</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="enquiry.html">Enquiry</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
-  <!-- Page header -->
   <header>
     <h1>Our Story</h1>
-    <p>
-      Sweet Buns Bakery was founded in 2017 by Thato and Michael, two friends passionate about baking.  
-      What started as a weekend market stall quickly grew into a neighborhood bakery loved for its fresh bread, cakes, and pastries.
-    </p>
+    <p>Sweet Buns Bakery was founded in 2017 by Thato and Michael, two friends passionate about baking. What started as a weekend market stall quickly grew into a neighbourhood bakery loved for its fresh bread, cakes and pastries.</p>
   </header>
 
-  <!-- Main content area -->
   <main class="content">
     <section class="intro">
       <h2>Mission</h2>
@@ -39,32 +41,28 @@
         <li>Support local farmers with sustainable ingredients</li>
         <li>Create a warm, community-driven bakery space</li>
         <li>Maintain the highest quality and taste standards</li>
-        <li>Blend traditional recipes with modern tastes</li>
+        <li>Blend traditional recipes with modern tastes – see our <a href="gallery.html">gallery</a></li>
       </ul>
 
       <h2>Vision</h2>
       <ul>
-        <li>Be Cape Town’s most trusted and loved bakery</li>
+        <li>Be Cape Town's most trusted and loved bakery</li>
         <li>Grow steadily while keeping a family-style atmosphere</li>
         <li>Encourage healthy eating with fresh, local produce</li>
-        <li>Build an online presence to connect with more people</li>
+        <li>Build an online presence to connect with more people – <a href="contact.html">contact us</a></li>
       </ul>
     </section>
 
     <aside class="sidebar">
-      <h3>Specials</h3>
-      <p>Check our seasonal treats and custom cakes available this week.</p>
+      <h3>Specials this week</h3>
+      <p>Hot cross buns – R20<br>Carrot cake slice – R50<br>Sugar cubes (4 pc) – R30</p>
     </aside>
   </main>
-<button class="accordion">Where do you source your ingredients?</button>
-<div class="panel"><p>We partner with local Cape Town farms for fresh, sustainable produce.</p></div>
-<button class="accordion">Do you offer gluten-free options?</button>
-<div class="panel"><p>Yes – all our GF goods are baked in a separate area to avoid cross-contamination.</p></div>
-  <!-- Footer -->
+
   <footer>
     <p>&copy; 2025 Sweet Buns Bakery</p>
   </footer>
 
+  <script src="js/main.js"></script>
 </body>
 </html>
-
