--- a/contact.html
+++ b/contact.html
@@ -2,52 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Contact Sweet Buns Bakery | Cape Town</title>
+  <title>Contact Sweet Buns Bakery | Phone, Map & Form – Cape Town</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Contact Sweet Buns Bakery for orders, questions or collaborations. Email, phone, map and quick form. Fresh bread, custom cakes & catering in Cape Town.">
+  <meta name="description" content="Contact Sweet Buns Bakery for orders, questions or collaborations. Phone, map, quick form. Fresh bread, custom cakes & catering in Cape Town.">
   <link rel="canonical" href="https://yourdomain.net/contact.html">
 
-  <!-- Open-Graph / Twitter -->
-  <meta property="og:title" content="Contact Sweet Buns Bakery">
-  <meta property="og:description" content="Reach out for fresh bread, custom cakes or catering in Cape Town.">
-  <meta property="og:image" content="https://yourdomain.net/images/sweet-treats-3.jpg">
-  <meta property="og:type" content="website">
+  <meta property="og:title" content="Contact Sweet Buns Bakery | Phone, Map & Form – Cape Town">
+  <meta property="og:description" content="Phone, e-mail, map, social media and quick form. Contact Sweet Buns Bakery for orders, questions or collaborations in Cape Town.">
+  <meta property="og:image" content="https://yourdomain.net/images/artisan-bread-display-cape-town.jpg">
   <meta name="twitter:card" content="summary_large_image">
 
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <!-- Navigation -->
+  <nav>
+    <h1 class="logo">Sweet Buns</h1>
+    <ul>
+      <li><a href="homepage.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="enquiry.html">Enquiry</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
-<nav>
-  <h1 class="logo">Sweet Buns</h1>
-  <ul>
-    <li><a href="homepage.html">Home</a></li>
-    <li><a href="about.html">About Us</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="enquiry.html">Enquiry</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
-  <!-- Page header -->
   <header>
-    <h1>Contact Sweet Buns</h1>
-    <p>Email: <a href="mailto:info@sweetbuns.com">info@sweetbuns.com</a></p>
-    <p>Phone: <a href="tel:+27123456789">+27 123 456 789</a></p>
-    <p>Address: 45 Bakery Street, Cape Town, South Africa</p>
-    <p>Instagram: <a href="https://instagram.com/sweetbunsofficial" target="_blank" rel="noopener">@sweetbunsofficial</a>
-       | TikTok: <a href="https://tiktok.com/@sweetbunsofficial" target="_blank" rel="noopener">@SweetBunsofficial</a></p>
+    <h1>Contact Sweet Buns Bakery</h1>
+    <p>Reach us by phone, e-mail, social media or the quick form below. We reply within 24 h.</p>
   </header>
 
-  <!-- Main content -->
   <main class="content">
     <section class="intro">
       <h2>Get in touch</h2>
       <p>We'd love to hear from you. Use the quick form below, or reach us via e-mail, phone or social media.</p>
 
-      <!-- Validated e-mail form -->
+      <!-- Contact details + internal links -->
+      <p>Email: <a href="mailto:info@sweetbuns.com">info@sweetbuns.com</a> | Phone: <a href="tel:+27123456789">+27 123 456 789</a></p>
+      <p>Address: 45 Bakery Street, Cape Town, South Africa</p>
+      <p>Instagram: <a href="https://instagram.com/sweetbunsofficial" target="_blank" rel="noopener">@sweetbunsofficial</a> | TikTok: <a href="https://tiktok.com/@sweetbunsofficial" target="_blank" rel="noopener">@SweetBunsofficial</a></p>
+      <p>Or <a href="enquiry.html">make an enquiry</a> for custom cakes / catering.</p>
+
+      <!-- Validated contact form -->
       <div class="form-wrap">
         <form id="emailForm" novalidate>
           <input type="hidden" name="formType" value="contact">
@@ -79,21 +76,16 @@
       <div id="map"></div>
     </section>
 
-    <!-- Sidebar -->
     <aside class="sidebar">
       <h3>Specials this week</h3>
-      <p>Hot cross buns – R20<br>
-         Carrot cake slice – R50<br>
-         Sugar cubes (4 pc) – R30</p>
+      <p>Hot cross buns – R20<br>Carrot cake slice – R50<br>Sugar cubes (4 pc) – R30</p>
     </aside>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Sweet Buns Bakery</p>
   </footer>
 
-  <!-- Scripts -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="js/main.js"></script>
 </body>
