--- a/enquiry.html
+++ b/enquiry.html
@@ -2,39 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Enquiry | Sweet Buns Bakery</title>
+  <title>Bakery Enquiry Cape Town | Order Custom Cakes & Catering – Sweet Buns</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Enquire about custom cakes, catering, volunteering or sponsorships with Sweet Buns Bakery, Cape Town.">
+  <meta name="description" content="Enquire about custom cakes, event catering, volunteering or sponsorships. Quick 24 h response from Sweet Buns Bakery, Cape Town.">
   <link rel="canonical" href="https://yourdomain.net/enquiry.html">
+
+  <meta property="og:title" content="Bakery Enquiry Cape Town | Order Custom Cakes & Catering – Sweet Buns">
+  <meta property="og:description" content="Enquire about custom cakes, event catering, volunteering or sponsorships. Quick 24 h response from Sweet Buns Bakery, Cape Town.">
+  <meta property="og:image" content="https://yourdomain.net/images/custom-birthday-cake-cape-town.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <!-- Navigation (identical on every page) -->
- <nav>
-  <h1 class="logo">Sweet Buns</h1>
-  <ul>
-    <li><a href="homepage.html">Home</a></li>
-    <li><a href="about.html">About Us</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="enquiry.html">Enquiry</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+  <nav>
+    <h1 class="logo">Sweet Buns</h1>
+    <ul>
+      <li><a href="homepage.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="enquiry.html">Enquiry</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
-  <!-- Page header -->
   <header>
     <h1>Make an Enquiry</h1>
-    <p>Ask about custom cakes, catering, volunteering or sponsorship opportunities.&nbsp; We’ll get back to you within 24&nbsp;hours.</p>
+    <p>Ask about custom cakes, catering, volunteering or sponsorship opportunities. We’ll get back to you within 24 hours.</p>
   </header>
 
-  <!-- Main content -->
   <main class="content">
     <section class="intro">
       <h2>Tell us what you need</h2>
 
-      <!-- Enquiry form (styled exactly like contact.html) -->
+      <!-- Enquiry form (same styling as contact.html) -->
       <div class="form-wrap">
         <form id="emailForm" novalidate>
           <input type="hidden" name="formType" value="enquiry">
@@ -73,24 +76,20 @@
           <p id="formMsg" role="alert"></p>
         </form>
       </div>
+
+      <p>Or simply e-mail us at <a href="mailto:info@sweetbuns.com">info@sweetbuns.com</a> – we reply within 24 hours.</p>
     </section>
 
-    <!-- Sidebar (same as other pages) -->
     <aside class="sidebar">
       <h3>Specials this week</h3>
-      <p>Hot cross buns – R20<br>
-         Carrot cake slice – R50<br>
-         Sugar cubes (4 pc) – R30</p>
+      <p>Hot cross buns – R20<br>Carrot cake slice – R50<br>Sugar cubes (4 pc) – R30</p>
     </aside>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Sweet Buns Bakery</p>
   </footer>
 
-  <!-- Scripts -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
