--- a/homepage.html
+++ b/homepage.html
@@ -1,79 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sweet Buns | Home</title>
+  <meta charset="utf-8">
+  <title>Bakery Cape Town | Sweet Buns – Fresh Bread, Cakes & Community</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Sweet Buns Bakery offers daily fresh bread, vegan & gluten-free treats, custom cakes & catering in Cape Town. Order online or visit us today.">
+  <link rel="canonical" href="https://yourdomain.net/">
+
+  <!-- Open-Graph / Twitter -->
+  <meta property="og:title" content="Bakery Cape Town | Sweet Buns – Fresh Bread, Cakes & Community">
+  <meta property="og:description" content="Daily fresh bread, custom cakes, vegan & gluten-free options. Cape Town's favourite community bakery.">
+  <meta property="og:image" content="https://yourdomain.net/images/artisan-bread-display-cape-town.jpg">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
 
-  <!-- this is the Navigation for the homepage-->
-  
-<nav>
-  <h1 class="logo">Sweet Buns</h1>
-  <ul>
-    <li><a href="homepage.html">Home</a></li>
-    <li><a href="about.html">About Us</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="enquiry.html">Enquiry</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
-  <!-- Page header with the main image of the screen -->
+<body>
+  <nav>
+    <h1 class="logo">Sweet Buns</h1>
+    <ul>
+      <li><a href="homepage.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="enquiry.html">Enquiry</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
   <header>
     <h1>Welcome to Sweet Buns Bakery</h1>
-    
-<img 
-  src="images/sweet treats 3.jpeg"
-  srcset="
-    images/sweet treats 3.jpeg 400w,
-    images/sweet treats 3.jpeg 800w,
-    images/sweet treats 3.jpeg 200w
-  "
-  sizes="(max-width: 600px) 100vw,
-         (max-width: 992px) 80vw,
-         60vw"
-  alt="Freshly baked bread display">
-
-    <p>
-      Cape Town’s community bakery – fresh, affordable, and made with love.<br>
-      From artisanal breads to vegan and gluten-free treats, we have something for everyone.
-    </p>
+    <img src="images/artisan-bread-display-cape-town.jpg"
+         srcset="images/artisan-bread-display-cape-town-400.jpg 400w,
+                 images/artisan-bread-display-cape-town-800.jpg 800w"
+         sizes="(max-width: 600px) 100vw, 80vw"
+         alt="Artisan sour-dough bread display at Sweet Buns Bakery Cape Town"
+         loading="lazy">
+    <p>Cape Town's community bakery – fresh, affordable, made with love.<br>
+       From <a href="services.html#daily-bread">artisanal breads</a> to <a href="services.html#vegan-options">vegan and gluten-free treats</a>, we have something for everyone.</p>
   </header>
 
-  <!-- Main content area -->
   <main class="content">
     <section class="intro">
       <h2>Our Story</h2>
-      <p>
-        Sweet Buns Bakery is a Cape Town–based bakery loved for fresh bread, cakes, and pastries.
-        Started in 2017 by Thato and Michael, it has grown into a neighbourhood favourite while
-        staying true to locally sourced ingredients and friendly service.
-      </p>
+      <p>Sweet Buns Bakery is a Cape Town-based bakery loved for fresh bread, cakes and pastries. Started in 2017 by Thato and Michael, it has grown into a neighbourhood favourite while staying true to <a href="about.html">locally sourced ingredients</a> and friendly service.</p>
 
       <h2>Why Choose Us?</h2>
-      <p>
-        Unlike large franchises, we focus on local ingredients, friendly service,
-        and that “home away from home” feeling.Ensuring a fresh and unique expericne for every customer
-      </p>
+      <p>Unlike large franchises, we focus on local ingredients, friendly service and that “home away from home” feeling. <a href="gallery.html">Browse our gallery</a> to see recent creations or <a href="enquiry.html">enquire about custom orders</a>.</p>
     </section>
 
     <aside class="sidebar">
-      <h3>Specials</h3>
-      <p>Today’s seasonal treats
-        hot cross buns R20
-        carrot cake R50
-        sugar cubes R30
-      </p>
+      <h3>Specials this week</h3>
+      <p>Hot cross buns – R20<br>
+         Carrot cake slice – R50<br>
+         Sugar cubes (4 pc) – R30</p>
     </aside>
   </main>
 
-  <!-- The Footer -->
   <footer>
     <p>&copy; 2025 Sweet Buns Bakery</p>
   </footer>
 
+  <script src="js/main.js"></script>
 </body>
 </html>
