--- a/services.html
+++ b/services.html
@@ -2,75 +2,70 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Our Services | Sweet Buns Bakery Cape Town</title>
+  <title>Bakery Services Cape Town | Custom Cakes, Catering, Vegan Options</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Daily fresh bread, custom cakes, catering, vegan & gluten-free options. Cape Town bakery services for families, students, businesses.">
+  <meta name="description" content="Daily bread, custom birthday cakes, corporate catering, vegan & gluten-free options. Reliable Cape Town bakery services for families, students & businesses.">
   <link rel="canonical" href="https://yourdomain.net/services.html">
 
-  <!-- Open-Graph / Twitter -->
-  <meta property="og:title" content="Our Services | Sweet Buns Bakery">
-  <meta property="og:description" content="Daily fresh bread, custom cakes, catering, vegan & gluten-free options in Cape Town.">
-  <meta property="og:image" content="https://yourdomain.net/images/custom-cake.jpg">
-  <meta property="og:type" content="website">
+  <meta property="og:title" content="Bakery Services Cape Town | Custom Cakes, Catering, Vegan Options">
+  <meta property="og:description" content="Daily fresh bread, custom cakes, corporate catering, vegan & gluten-free options. Cape Town bakery services for families, students & businesses.">
+  <meta property="og:image" content="https://yourdomain.net/images/custom-birthday-cake-cape-town.jpg">
   <meta name="twitter:card" content="summary_large_image">
 
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <!-- Navigation -->
- <nav>
-  <h1 class="logo">Sweet Buns</h1>
-  <ul>
-    <li><a href="homepage.html">Home</a></li>
-    <li><a href="about.html">About Us</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="enquiry.html">Enquiry</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+  <nav>
+    <h1 class="logo">Sweet Buns</h1>
+    <ul>
+      <li><a href="homepage.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="enquiry.html">Enquiry</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
-  <!-- Page header -->
   <header>
     <h1>Our Services</h1>
     <p>We provide more than just baked goods – Sweet Buns is about community, quality and innovation.</p>
+
+    <!-- Search bar moved to top -->
+    <label for="serviceSearch" class="visually-hidden">Search services</label>
+    <input id="serviceSearch" type="search" placeholder="Search services…" aria-label="Search services">
   </header>
 
-  <!-- Main content -->
   <main class="content">
     <section class="intro">
       <h2>What we offer</h2>
-
-      <!-- Live search box (dynamic filter) -->
-      <label for="serviceSearch" class="visually-hidden">Search services</label>
-      <input id="serviceSearch" type="search" placeholder="Search services…" aria-label="Search services">
 
       <!-- Service cards (each searchable) -->
       <div class="service-cards">
         <article class="service-card">
           <h3>Daily fresh breads, pastries & cakes</h3>
-          <p>Baked on site every morning using local stone-ground flour.</p>
+          <p>Baked on site every morning using local stone-ground flour. <a href="gallery.html">See photos</a></p>
         </article>
 
         <article class="service-card">
           <h3>Vegan, gluten-free & reduced-sugar options</h3>
-          <p>Never an afterthought – separate ovens, dedicated trays.</p>
+          <p>Never an afterthought – separate ovens, dedicated trays. <a href="enquiry.html">Enquire</a></p>
         </article>
 
         <article class="service-card">
           <h3>Custom cakes for birthdays & events</h3>
-          <p>From kids’ unicorns to elegant wedding tiers. 48 h notice.</p>
+          <p>From kids’ unicorns to elegant wedding tiers. 48 h notice. <a href="enquiry.html">Order here</a></p>
         </article>
 
         <article class="service-card">
           <h3>Catering for small businesses & events</h3>
-          <p>Breakfast trays, sandwich platters, dessert tables.</p>
+          <p>Breakfast trays, sandwich platters, dessert tables. <a href="contact.html">Contact us</a></p>
         </article>
 
         <article class="service-card">
           <h3>Seasonal specials & creative desserts</h3>
-          <p>Think hot-cross-buns, mince-pie croissants, peppermint-crisp tarts.</p>
+          <p>Think hot-cross-buns, mince-pie croissants, peppermint-crisp tarts. <a href="gallery.html">Browse gallery</a></p>
         </article>
       </div>
 
@@ -78,7 +73,7 @@
       <h2>Frequently asked questions</h2>
       <button class="accordion">Where do you source your ingredients?</button>
       <div class="panel">
-        <p>We partner with local Cape Town farms for fresh, sustainable produce.</p>
+        <p>We partner with local Cape Town farms for fresh, sustainable produce. <a href="about.html">Read our story</a></p>
       </div>
 
       <button class="accordion">Do you offer gluten-free options?</button>
@@ -88,20 +83,16 @@
 
       <button class="accordion">How much notice for a custom cake?</button>
       <div class="panel">
-        <p>48 hours for standard designs; 1 week for large or intricate cakes.</p>
+        <p>48 hours for standard designs; 1 week for large or intricate cakes. <a href="enquiry.html">Enquire now</a></p>
       </div>
     </section>
 
-    <!-- Sidebar -->
     <aside class="sidebar">
       <h3>Specials this week</h3>
-      <p>Hot cross buns – R20<br>
-         Carrot cake slice – R50<br>
-         Sugar cubes (4 pc) – R30</p>
+      <p>Hot cross buns – R20<br>Carrot cake slice – R50<br>Sugar cubes (4 pc) – R30</p>
     </aside>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Sweet Buns Bakery</p>
   </footer>
